# jitify

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists.txt.in  Doxyfile  Doxyfile2  LICENSE  Makefile  README.md  jitify.hpp  jitify2.hpp  jitify2_preprocess.cpp  jitify2_test.cu  jitify2_test_kernels.cu  jitify2_user_guide.md  jitify_example.cpp  jitify_test.cpp  jitify_test.cu  nvrtc_cli.cpp  nvrtc_cli_test.sh  stringify.cpp
example_headers/: class_arg_kernel.cuh  constant_header.cuh  my_header1.cuh  my_header2.cuh  my_header3.cuh
serialization_goldens/: CompiledProgram.17.jitify  LinkedProgram.17.jitify  PreprocessedProgram.17.jitify  Program.17.jitify
